--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css?family=Public+Sans:700,400|DM+Serif+Display:700,400");
